--- a/remove_timesheet_codes.ipynb
+++ b/remove_timesheet_codes.ipynb
@@ -11,9 +11,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'google_calendar_api (Python 3.13.2)' requires the ipykernel package.\n",
+      "\u001b[1;31m<a href='command:jupyter.createPythonEnvAndSelectController'>Create a Python Environment</a> with the required packages.\n",
+      "\u001b[1;31mOr install 'ipykernel' using the command: 'conda install -n google_calendar_api ipykernel --update-deps --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "import requests\n",
     "import json\n",
@@ -191,125 +202,125 @@
     "def put_eventbyids(id,ACCESS_TOKEN,TENANT_ID,APP_KEY,EVENT_NAME,EVENT_DURATION,EVENT_START,EVENT_TECHID):\n",
     "\n",
     "\n",
-    "    ################################################################################\n",
-    "    ## FIND NONJOBEVENT\n",
-    "    url = f\"https://api.servicetitan.io/dispatch/v2/tenant/{TENANT_ID}/non-job-appointments/{id}\"\n",
-    "    # payload = {\n",
-    "    #     \"technicianId\": EVENT_TECHID,\n",
-    "    #     \"start\": EVENT_START,\n",
-    "    #     \"duration\": EVENT_DURATION,\n",
-    "    #     \"name\": EVENT_NAME,\n",
-    "    #     \"timesheetCodeId\": 0\n",
-    "    # }\n",
-    "    headers = {\n",
-    "        \"Authorization\": f'{ACCESS_TOKEN}', \n",
-    "        \"ST-App-Key\": f'{APP_KEY}'\n",
-    "    }\n",
-    "    # print(id,payload)\n",
-    "    # response = requests.request(\"GET\", url, data=payload, headers=headers)\n",
-    "    response = requests.request(\"GET\", url, params={}, headers=headers)\n",
+    "  ################################################################################\n",
+    "  ## FIND NONJOBEVENT\n",
+    "  url = f\"https://api.servicetitan.io/dispatch/v2/tenant/{TENANT_ID}/non-job-appointments/{id}\"\n",
+    "  # payload = {\n",
+    "  #     \"technicianId\": EVENT_TECHID,\n",
+    "  #     \"start\": EVENT_START,\n",
+    "  #     \"duration\": EVENT_DURATION,\n",
+    "  #     \"name\": EVENT_NAME,\n",
+    "  #     \"timesheetCodeId\": 0\n",
+    "  # }\n",
+    "  headers = {\n",
+    "    \"Authorization\": f'{ACCESS_TOKEN}', \n",
+    "    \"ST-App-Key\": f'{APP_KEY}'\n",
+    "  }\n",
+    "  # print(id,payload)\n",
+    "  # response = requests.request(\"GET\", url, data=payload, headers=headers)\n",
+    "  response = requests.request(\"GET\", url, params={}, headers=headers)\n",
     "\n",
-    "    TARGET_JSON = json.loads(response.text)\n",
-    "    print(TARGET_JSON)\n",
+    "  TARGET_JSON = json.loads(response.text)\n",
+    "  print(TARGET_JSON)\n",
     "\n",
-    "    old_id=TARGET_JSON['id']\n",
+    "  old_id=TARGET_JSON['id']\n",
     "\n",
-    "    #DEBUG\n",
-    "    with open('BEFORE_EVENT.json', 'w') as f:\n",
-    "        json.dump(TARGET_JSON, f, indent=4)\n",
-    "    ################################################################################\n",
-    "    ## POST NEW EVENT WITH NO TIMECODE\n",
-    "    payload = {\n",
-    "        \"technicianId\": TARGET_JSON['technicianId'],\n",
-    "        \"start\": TARGET_JSON['start'],\n",
-    "        \"duration\": TARGET_JSON['duration'],\n",
-    "        \"name\": TARGET_JSON['name'],\n",
-    "        \"summary\": TARGET_JSON['summary'],\n",
-    "        \"removeTechnicianFromCapacityPlanning\":True\n",
-    "        # \"timesheetCodeId\": TARGET_JSON['timesheetCodeId']\n",
-    "        # \"timesheetCodeId\": none\n",
-    "    }\n",
-    "    url = f\"https://api.servicetitan.io/dispatch/v2/tenant/{TENANT_ID}/non-job-appointments\"\n",
-    "    # payload = {\n",
-    "    #     \"technicianId\": EVENT_TECHID,\n",
-    "    #     \"start\": EVENT_START,\n",
-    "    #     \"duration\": EVENT_DURATION,\n",
-    "    #     \"name\": EVENT_NAME,\n",
-    "    #     \"timesheetCodeId\": 0\n",
-    "    # }\n",
-    "    headers = {\n",
-    "        \"Authorization\": f'{ACCESS_TOKEN}', \n",
-    "        \"ST-App-Key\": f'{APP_KEY}'\n",
-    "    }\n",
-    "    # print(id,payload)\n",
-    "    # response = requests.request(\"GET\", url, data=payload, headers=headers)\n",
-    "    response = requests.request(\"POST\", url, data=payload, headers=headers)\n",
-    "    TARGET_JSON = json.loads(response.text)\n",
-    "    print(TARGET_JSON)\n",
-    "    #DEBUG\n",
-    "    with open('AFTER_EVENT.json', 'w') as f:\n",
-    "        json.dump(TARGET_JSON, f, indent=4)\n",
-    "    ################################################################################   327933056?appointmentId=327933441\n",
-    "    ## DEL OLD NONJOBEVENT\n",
-    "    url = f\"https://api.servicetitan.io/dispatch/v2/tenant/{TENANT_ID}/non-job-appointments/{old_id}\"\n",
-    "    \n",
-    "    # payload = {\n",
-    "    #     \"technicianId\": EVENT_TECHID,\n",
-    "    #     \"start\": EVENT_START,\n",
-    "    #     \"duration\": EVENT_DURATION,\n",
-    "    #     \"name\": EVENT_NAME,\n",
-    "    #     \"timesheetCodeId\": 0\n",
-    "    # }\n",
-    "    headers = {\n",
-    "        \"Authorization\": f'{ACCESS_TOKEN}', \n",
-    "        \"ST-App-Key\": f'{APP_KEY}'\n",
-    "    }\n",
-    "    # print(id,payload)\n",
-    "    # response = requests.request(\"GET\", url, data=payload, headers=headers)\n",
-    "    response = requests.request(\"DELETE\", url, params={}, headers=headers)\n",
+    "  #DEBUG\n",
+    "  with open('BEFORE_EVENT.json', 'w') as f:\n",
+    "    json.dump(TARGET_JSON, f, indent=4)\n",
+    "  ################################################################################\n",
+    "  ## POST NEW EVENT WITH NO TIMECODE\n",
+    "  payload = {\n",
+    "    \"technicianId\": TARGET_JSON['technicianId'],\n",
+    "    \"start\": TARGET_JSON['start'],\n",
+    "    \"duration\": TARGET_JSON['duration'],\n",
+    "    \"name\": TARGET_JSON['name'],\n",
+    "    \"summary\": TARGET_JSON['summary'],\n",
+    "    \"removeTechnicianFromCapacityPlanning\":True\n",
+    "    # \"timesheetCodeId\": TARGET_JSON['timesheetCodeId']\n",
+    "    # \"timesheetCodeId\": none\n",
+    "  }\n",
+    "  url = f\"https://api.servicetitan.io/dispatch/v2/tenant/{TENANT_ID}/non-job-appointments\"\n",
+    "  # payload = {\n",
+    "  #     \"technicianId\": EVENT_TECHID,\n",
+    "  #     \"start\": EVENT_START,\n",
+    "  #     \"duration\": EVENT_DURATION,\n",
+    "  #     \"name\": EVENT_NAME,\n",
+    "  #     \"timesheetCodeId\": 0\n",
+    "  # }\n",
+    "  headers = {\n",
+    "    \"Authorization\": f'{ACCESS_TOKEN}', \n",
+    "    \"ST-App-Key\": f'{APP_KEY}'\n",
+    "  }\n",
+    "  # print(id,payload)\n",
+    "  # response = requests.request(\"GET\", url, data=payload, headers=headers)\n",
+    "  response = requests.request(\"POST\", url, data=payload, headers=headers)\n",
+    "  TARGET_JSON = json.loads(response.text)\n",
+    "  print(TARGET_JSON)\n",
+    "  #DEBUG\n",
+    "  with open('AFTER_EVENT.json', 'w') as f:\n",
+    "    json.dump(TARGET_JSON, f, indent=4)\n",
+    "  ################################################################################   327933056?appointmentId=327933441\n",
+    "  ## DEL OLD NONJOBEVENT\n",
+    "  url = f\"https://api.servicetitan.io/dispatch/v2/tenant/{TENANT_ID}/non-job-appointments/{old_id}\"\n",
+    "  \n",
+    "  # payload = {\n",
+    "  #     \"technicianId\": EVENT_TECHID,\n",
+    "  #     \"start\": EVENT_START,\n",
+    "  #     \"duration\": EVENT_DURATION,\n",
+    "  #     \"name\": EVENT_NAME,\n",
+    "  #     \"timesheetCodeId\": 0\n",
+    "  # }\n",
+    "  headers = {\n",
+    "    \"Authorization\": f'{ACCESS_TOKEN}', \n",
+    "    \"ST-App-Key\": f'{APP_KEY}'\n",
+    "  }\n",
+    "  # print(id,payload)\n",
+    "  # response = requests.request(\"GET\", url, data=payload, headers=headers)\n",
+    "  response = requests.request(\"DELETE\", url, params={}, headers=headers)\n",
     "\n",
-    "    TARGET_JSON = json.loads(response.text)\n",
-    "    print(TARGET_JSON)\n",
+    "  TARGET_JSON = json.loads(response.text)\n",
+    "  print(TARGET_JSON)\n",
     "\n",
-    "    #DEBUG\n",
-    "    with open('BEFORE_EVENT.json', 'w') as f:\n",
-    "        json.dump(TARGET_JSON, f, indent=4)\n",
-    "    ################################################################################\n",
+    "  #DEBUG\n",
+    "  with open('BEFORE_EVENT.json', 'w') as f:\n",
+    "    json.dump(TARGET_JSON, f, indent=4)\n",
+    "  ################################################################################\n",
     "\n",
     "# print(response.text)\n",
-    "    return(TARGET_JSON)\n",
+    "  return(TARGET_JSON)\n",
     "# Pretty_Json(TARGET_JSON)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def patch_invoicebyID(id,items,ACCESS_TOKEN,TENANT_ID,APP_KEY):\n",
     "\n",
-    "    url = f\"https://api.servicetitan.io/accounting/v2/tenant/{TENANT_ID}/invoices/{id}/items\"\n",
-    "    payload = {\n",
-    "        \"items\" : items\n",
-    "    }\n",
-    "    headers = {\n",
-    "        \"Authorization\": f'{ACCESS_TOKEN}', \n",
-    "        \"ST-App-Key\": f'{APP_KEY}'\n",
-    "    }\n",
+    "  url = f\"https://api.servicetitan.io/accounting/v2/tenant/{TENANT_ID}/invoices/{id}/items\"\n",
+    "  payload = {\n",
+    "    \"items\" : items\n",
+    "  }\n",
+    "  headers = {\n",
+    "    \"Authorization\": f'{ACCESS_TOKEN}', \n",
+    "    \"ST-App-Key\": f'{APP_KEY}'\n",
+    "  }\n",
     "\n",
-    "    # response = requests.request(\"GET\", url, data=payload, headers=headers)\n",
-    "    response = requests.request(\"PATCH\", url, data=items, headers=headers)\n",
+    "  # response = requests.request(\"GET\", url, data=payload, headers=headers)\n",
+    "  response = requests.request(\"PATCH\", url, data=items, headers=headers)\n",
     "\n",
-    "    # TARGET_JSON = json.loads(response.text)\n",
-    "    print(response.text)\n",
-    "    # return(TARGET_JSON)\n",
+    "  # TARGET_JSON = json.loads(response.text)\n",
+    "  print(response.text)\n",
+    "  # return(TARGET_JSON)\n",
     "# Pretty_Json(TARGET_JSON)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,17 +328,17 @@
     "# and return labor_items\n",
     "def parse_labor_items(target_invoice,labor_items):\n",
     "\n",
-    "    #Iterate through target_invoice and add them to labor items\n",
-    "    for item in target_invoice['data'][0]['items']:\n",
+    "  #Iterate through target_invoice and add them to labor items\n",
+    "  for item in target_invoice['data'][0]['items']:\n",
     "\n",
-    "        #Checks if display name contains \"(Labor)\"\n",
-    "        if (\"(Labor)\" in item['displayName']):\n",
+    "    #Checks if display name contains \"(Labor)\"\n",
+    "    if (\"(Labor)\" in item['displayName']):\n",
     "\n",
-    "            # Append Found Labor item to end of list\n",
-    "            labor_items = np.append(labor_items,item)\n",
-    "    \n",
-    "    # Return all labor items\n",
-    "    return(labor_items)"
+    "      # Append Found Labor item to end of list\n",
+    "      labor_items = np.append(labor_items,item)\n",
+    "\n",
+    "  # Return all labor items\n",
+    "  return(labor_items)"
    ]
   },
   {
@@ -872,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -962,16 +973,16 @@
    ],
    "source": [
     "if (__name__ == \"__main__\"):\n",
-    "    while True:\n",
-    "        current_time = datetime.now()\n",
-    "        # Print the current time\n",
-    "        print(\"Current time:\", current_time.strftime(\"%Y-%m-%d %H:%M:%S\"))\n",
-    "        main()\n",
-    "        current_time = datetime.now()\n",
-    "        # Print the current time\n",
-    "        print(\"Current time:\", current_time.strftime(\"%Y-%m-%d %H:%M:%S\"))\n",
-    "        break\n",
-    "        time.sleep(15 * 60)  # 15 minutes * 60 seconds\n"
+    "  while True:\n",
+    "    current_time = datetime.now()\n",
+    "    # Print the current time\n",
+    "    print(\"Current time:\", current_time.strftime(\"%Y-%m-%d %H:%M:%S\"))\n",
+    "    main()\n",
+    "    current_time = datetime.now()\n",
+    "    # Print the current time\n",
+    "    print(\"Current time:\", current_time.strftime(\"%Y-%m-%d %H:%M:%S\"))\n",
+    "    break\n",
+    "    time.sleep(15 * 60)  # 15 minutes * 60 seconds\n"
    ]
   },
   {
@@ -1082,7 +1093,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "google_calendar_api",
    "language": "python",
    "name": "python3"
   },
@@ -1096,7 +1107,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
